Refactor `StorageUpdateChannel`